- Lecture Notebook Folder Created - Lecture notebook 1 and 2 added in jupyter notebook format and pdf format - Assignment Folder strategy changed to include pdf format for all notebooks - Assignment 2 updated - Assignment 1 and 2: pdf version added

--- a/forest_assignment/02_Measurements_and_Mixed_States.ipynb
+++ b/forest_assignment/02_Measurements_and_Mixed_States.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-19T19:48:31.136144Z",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-19T19:48:31.147404Z",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-19T19:48:31.367295Z",
@@ -207,10 +207,10 @@
     {
      "data": {
       "text/plain": [
-       "{'00': 21, '01': 23, '10': 33, '11': 23}"
+       "{'00': 23, '01': 29, '10': 18, '11': 30}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -243,7 +243,19 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m~/assignment_helper.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'00'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m.25\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'01'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m.25\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'11'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m.25\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcounts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "counts = get_counts(circuit)\n",
     "assert abs(counts['00']/100-.25) < 0.1\n",
@@ -261,25 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-19T19:48:31.507651Z",
      "start_time": "2018-11-19T19:48:31.369445Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'00': 43, '01': 0, '10': 0, '11': 57}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "###\n",
     "### YOUR CODE HERE\n",
@@ -287,7 +288,8 @@
     "circuit = Program()\n",
     "ro = circuit.declare('ro', 'BIT', 2)\n",
     "circuit += H(0)\n",
-    "circuit += H(1)\n",
+    "#circuit += H(1)\n",
+    "circuit += CNOT(0,1)\n",
     "circuit += MEASURE(0, ro[0])\n",
     "circuit += MEASURE(0, ro[1])\n",
     "counts = get_counts(circuit)\n",
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -337,37 +339,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-19T19:48:31.519211Z",
      "start_time": "2018-11-19T19:48:31.509701Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.70710678+0.j, 0.        +0.j, 0.        +0.j, 0.70710678+0.j])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "###\n",
     "### YOUR CODE HERE\n",
     "###\n",
     "circuit = Program()\n",
     "circuit += H(0)\n",
-    "circuit += CNOT(0,1)"
+    "circuit += CNOT(0,1)\n",
+    "amplitudes = get_amplitudes(circuit)\n",
+    "amplitudes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -395,29 +388,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.5+0.j, 0. +0.j, 0. +0.j, 0.5+0.j],\n",
-       "       [0. +0.j, 0. +0.j, 0. +0.j, 0. +0.j],\n",
-       "       [0. +0.j, 0. +0.j, 0. +0.j, 0. +0.j],\n",
-       "       [0.5+0.j, 0. +0.j, 0. +0.j, 0.5+0.j]])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "###\n",
     "### YOUR CODE HERE\n",
     "###\n",
     "am = amplitudes.reshape([4,1])\n",
-    "dm = am @ am.T.conj()"
+    "dm = am @ am.T.conj()\n",
+    "dm"
    ]
   },
   {
